# Pluriview

./: .gitignore  CHANGELOG.md  CLAUDE_CONTEXT.md  Cargo.toml  LICENSE  README.md  build.rs
docs/superpowers/plans/: 2026-07-05-add-browser-ui.md
docs/superpowers/specs/: 2026-07-05-browser-canvas-design.md
src/: app.rs  browser.rs  main.rs  privacy.rs
src/canvas/: animation.rs  input.rs  mod.rs  state.rs
src/capture/: coordinator.rs  mod.rs
src/overlay/: mod.rs  region_selector.rs
src/persistence/: layout.rs  mod.rs  storage.rs
src/preview/: manager.rs  mod.rs  preview.rs
src/tray/: icon.rs  mod.rs
src/window_picker/: enumerator.rs  mod.rs  picker.rs
