[package]
name = "pluriview"
version = "0.2.0"
edition = "2021"
description = "Live window preview application with infinite canvas"
authors = ["Spatpit"]
build = "build.rs"

[dependencies]
# UI Framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence"
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
egui-phosphor = "0.7"

# Window Capture
windows-capture = "1.4"

# System Tray
tray-icon = "0.19"

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
directories = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
env_logger = "0.11"
url = "2.5"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
wry = { version = "0.55", default-features = false }
# Same versions wry already pulls in; used to reach ICoreWebView2_8 (audio mute).
webview2-com = "0.38"
windows-core = "0.61"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader"
] }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
